2004-04-01 Ben Maurer  <bmaurer@users.sourceforge.net>

	* reflection.[ch], icall.[ch], Fix support for pinning variables.

2004-04-01  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* assembly.c:
	(do_mono_assembly_open): the critical section also covers
	mono_image_open and mono_image_open_from_data. Fixes bug #56327.

2004-03-31  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* threads.c:
	(mono_manage_threads): abort the background threads when finishing.
	Fixes bug #47232.

2004-03-31  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* gc.c: only close the done_event handle if there was no timeout.
	C-ified comments.

2004-03-30  Martin Baulig  <martin@ximian.com>

	* icall.c (icall_entries): It's called "System.Activator", not
	"System.Activation".	

2004-03-30  Martin Baulig  <martin@ximian.com>

	* class.c (mono_ldtoken): Added `MonoGenericContext *' argument.
	(mono_class_create_from_typespec): Likewise.

2004-03-30  Martin Baulig  <martin@ximian.com>

	* reflection.h (MonoReflectionGenericParam): Use MonoBoolean for
	`has_ctor_constraint' and `initialized'.

2004-03-30  Martin Baulig  <martin@ximian.com>

	* reflection.c (encode_new_constraint): New static function to add
	the constructor constraint attribute to a type parameter.
	(encode_constraints): Call encode_new_constraint() if necessary.

	* reflection.h
	(MonoReflectionGenericParam): Added `guint32 has_ctor_constraint'.

	* row-indexes.h: Added CUSTOM_ATTR_GENERICPAR.
	
2004-03-29 Ben Maurer  <bmaurer@users.sourceforge.net>

	* reflection.c, icall.c: add support for pinning variables. 

2004-03-29  Bernie Solomon  <bernard@ugsolutions.com>

	* marshal.c (mono_marshal_get_managed_wrapper):
	init bool local with zero rather than null.

2004-03-29  Martin Baulig  <martin@ximian.com>

	* icall.c (ves_icall_MonoMethod_get_HasGenericParameters): Show
	the "official" behavior here.
	(ves_icall_MonoMethod_get_Mono_IsInflatedMethod): New interncall.

2004-03-29  Martin Baulig  <martin@ximian.com>
