@@ -1,3 +1,7 @@
+2004-04-01  Jackson Harper  <jackson@ximian.com>
+
+	* reflection.c: Set culture for assembly references.
+	
 2004-04-01 Ben Maurer  <bmaurer@users.sourceforge.net>
 
 	* reflection.[ch], icall.[ch], Fix support for pinning variables.
